--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -78,7 +78,7 @@
             {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
             {% else %} <li class="nav-item" style="margin: auto;">
             {% endif %}
-              <a class="nav-link primary_text" href="/involvement">Sponsor Registration</a>
+              <a class="nav-link primary_text" href="/golf-classic-sponsor">Sponsor Registration</a>
             </li>
 
             {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
