Make address updatable and clickable emails

--- a/custAdmin/templates/custAdmin/organization_information_form.html
+++ b/custAdmin/templates/custAdmin/organization_information_form.html
@@ -10,6 +10,12 @@
             <div id="frm">
                 <label> Contact Email - </label>
                 <input type="text" name="contact_email" id="contact_email" value="{{contact_email}}"><br>
+                <label> Street Adress - </label>
+                <input type="text" name="street_addr" id="street_addr" value="{{street_addr}}"><br>
+                <label> City, State ZIP - </label>
+                <input type="text" name="street_addr_2" id="street_addr_2" value="{{street_addr_2}}"><br>
+                <label> Social Media - </label>
+                <input type="text" name="facebook" id="facebook" value="{{facebook}}"><br>
                 <button id="submit" type="submit"> Submit</button>
             </div>
         </form>
