--- a/custAdmin/templates/custAdmin/home.html
+++ b/custAdmin/templates/custAdmin/home.html
@@ -16,6 +16,9 @@
                 <a href="/admin/people">People</a>
             </li>
             <li>
+                <a href="/admin/FAQ">FAQ</a>
+            </li>
+            <li>
                 <a href="/admin/donations">Donations</a>
             </li>
             <li>
