--- a/custAdmin/templates/custAdmin/golf_form.html
+++ b/custAdmin/templates/custAdmin/golf_form.html
@@ -768,7 +768,7 @@
                                 <label>Strip Price Variable:  </label>
                                 <input type="text" id="stripe_price_variable_price_input_golf_{{x.count}}" name="stripe_price_variable_price_input_golf_{{x.count}}" value="{{x.stripe_price_variable}}"><br>
         
-                                <label>Option Description: - this will be a bulleted list so follow each row with a semicolon to display correctly</label><br>
+                                <label>Option Description: - this will be a bulleted list and pressing enter will create a new line</label><br>
                                 <textarea type="text" name="golf_option_textarea_{{x.count}}" id="golf_option_textarea_{{x.count}}" value="John" rows="6" cols="50"> {{x.golf_option_textarea}} </textarea><br><br>
                             </div>
                         </div>
@@ -798,6 +798,7 @@
                                 <input type="text" id="stripe_price_variable_input_sponsor_{{x.count}}" name="stripe_price_variable_input_sponsor_{{x.count}}" value="{{x.stripe_price_variable}}"><br>
         
                                 <label>Option Description: </label><br>
+                                <label>Option Description: - this will be a bulleted list and pressing enter will create a new line</label><br>
                                 <textarea type="text" name="sponsor_option_textarea_{{x.count}}" id="sponsor_option_textarea_{{x.count}}" value="John" rows="6" cols="50"> {{x.sponsor_option_textarea}} </textarea><br><br>
                             </div>
                             
