--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -84,7 +84,7 @@
             {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
               {% else %} <li class="nav-item" style="margin: auto;">
               {% endif %}
-                <a class="nav-link primary_text" href="/involvement">FAQ</a>
+                <a class="nav-link primary_text" href="/FAQ">FAQ</a>
               </li>
             
           </ul>
